--- a/application/index/view/teacher/course.html
+++ b/application/index/view/teacher/course.html
@@ -72,66 +72,38 @@
                     </form>
                   </div>
                   <div class="col-md-4 text-right">
-                      <a href="http://localhost/microCourse/public/index.php/index/home/teachercourseedit" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a>
+                      <a href="http://127.0.0.1/microcourse/public/index/teacher/courseadd" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a>
                     </div>
                 </div>
                 
                 <hr />
-              <table>
-                <tr>
-                  <th><h4>选择周次:&nbsp&nbsp</h4></th>
-                <td>
-                    <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  第一周
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#">第一周</a></li>
-                  <li><a href="#">第二周</a></li>
-                  <li><a href="#">第三周</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">......</a></li>
-                </ul>
-              </div> 
-                  </td>
-                </tr>
-              </table>
+              
               <table class="table table-bordered">
                 <tr class="info">
+                  <th>序号</th>
                   <th>课程名称</th>
                   <th>课程代码</th>
+                  <th>任课老师</th>
                   <th>学期</th>
-                  <th>任课教师</th>
                   <th>课程类型</th>
                   <th>上课时间</th>
                   <th>操作</th>
                 </tr>
+                {volist name="courses" id="course" key="key"}
                 <tr>
-                  <td>商业网站开发</td>
-                  <td>GB12341234</td>
-                  <td>2018-2019春季</td>
-                  <td>潘杰</td>
-                  <td>选修课</td>
-                  <td><a href="http://localhost/microCourse/public/index.php/index/home/teachercoursetime" type="button" class="btn btn-default">点击查看</a></td>
+                  <td>{$key}</td>
+                  <td>{$course->getData('name')}</td>
+                  <td>{$course->getData('num')}</td>
+                  <td>{$course->getTeacher()->getData('name')}</td>
+                  <td>{$course->getTerm()->getData('name')}</td>
+                  <td>{eq name='course->getData("type")' value='1' }必修{else /}选修{/eq}</td>
+                  <td><a href="http://127.0.0.1/microcourse/public/index/teacher/coursesee" type="button" class="btn btn-default">点击查看</a></td>
                   <td>
-                    <a class=" btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
-                    <a class="btn btn-sm btn-primary" href="http://localhost/microCourse/public/index.php/index/home/teachercourseedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
+                    <a class=" btn btn-danger btn-sm" href="{:url('coursedelete?id=' . $course->getData('id'))}"><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
+                    <a class="btn btn-sm btn-primary" href="{:url('courseedit?id=' . $course->getData('id'))}"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
                   </td>
                 </tr>
-                 <tr>
-                  <td>123</td>  
-                  <td>456</td>
-                  <td>654</td>
-                  <td>789</td>
-                  <td>987</td>
-                  <td><a href="http://localhost/microCourse/public/index.php/index/home/teachercoursetime" type="button" class="btn btn-default">点击查看</a></td>
-                  <td>
-                    <a class=" btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
-                    <a class="btn btn-sm btn-primary" href="http://localhost/microCourse/public/index.php/index/home/teachercourseedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
-                  </td>
-                </tr>
-  
+                {/volist}
             </table>
               <br><br>
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
