--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -24,7 +24,7 @@
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">姓名:</label>
                 <div class="col-sm-10">
-                    
+                    <input type="hidden" class="form-control" name="id" value="{$id}" />
                     <input type="text" class="form-control" name="name" />
                 </div>
             </div>
