--- a/application/index/view/student.html
+++ b/application/index/view/student.html
@@ -32,7 +32,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li {eq name="$isaction" value="page"}class="active"{/eq}><a href="/index/student/page">学生主页</a></li>
-                    <li {eq name="$isaction" value="online"}class="active"{/eq}><a href="/index/student/online">上课模式</a></li>
                     <li {eq name="$isaction" value="course"}class="active"{/eq}><a href="/index/student/course">课程查询</a></li>
                     <li {eq name="$isaction" value="score"}class="active"{/eq}><a href="/index/student/score">成绩查询</a></li>
                     <li {eq name="$isaction" value="info"}class="active"{/eq}><a href="/index/student/info">个人信息</a></li>
@@ -50,6 +49,19 @@
         </div><!-- /.container-fluid -->
     </nav>
     <br><br>
+            <?php use app\index\model\Term; ?>
+            <?php $time = Term::timeAll(); ?>
+
+            <br />
+              {eq name='$time->term' value='0'}   
+              <div class="alert {eq name='$time->term' value='1'}alert-success{else /}alert-warning{/eq}" role="alert">激活学期{eq name="$time->term" value="1"}已开始{else /}已结束{/eq}</div>
+              {else}
+              <div class="alert alert-success" role="alert">{$time->date}&nbsp&nbsp第{$time->week}教学周&nbsp&nbsp{$time->weekday}&nbsp&nbsp第{$time->largeClass}大节</div>
+              <h3></h3>
+              {/eq}
+              
+
+
     {block name="body"}
     {/block}
 </body>
